--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
- /* Google fonts import */
+/* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
 /* Asterisk wildcard selector to override default styles added by browser*/
@@ -15,19 +15,21 @@ display: flex;
 flex-direction: column;
 /* Generic project styles */
 color: #3a3a3a;
-
+font-family: "Lato", sans-serif;
 }
 
 /* Header */
 header {
     background-color: lightcoral;
 }
+
 /* Main Content*/
 main {
     background-color: lightblue;
     /* Make main content take up any surplus space to push footer down */
     flex: 1 0 auto;
 }
+
 /* Footer */ 
 footer {
     background-color: orange;
