--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,16 @@ main {
     position: relative;
 }
 
+/* Reasons section*/
+#reasons {
+    margin: 20px auto;
+    width: 90%;
+}
+
+#benefits {
+    margin-top: 20px;
+}
+
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent*/
     background-color: rgba(241, 109, 107, .7);
